--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:recyclerview-v7:26.0.0'
+    compile 'com.android.support:recyclerview-v7:26.0.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.commit451:PhotoView:1.2.4'
     compile 'com.isseiaoki:simplecropview:1.0.13'
@@ -50,5 +50,9 @@ dependencies {
     compile 'com.flurgle:camerakit:0.9.17'
     compile 'org.tensorflow:tensorflow-android:1.3.0'
     compile 'com.afollestad.material-dialogs:core:0.9.4.7'
+    compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.melnykov:floatingactionbutton:1.0.7'
+    compile 'com.github.ppamorim:dragger:1.2'
     testCompile 'junit:junit:4.12'
 }
