기능 추가   * 다음지도 API 추가   * 상세정보 페이지에 명소 위치를 지도로 보여주도록함

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -61,4 +61,5 @@ dependencies {
     compile 'com.matthew-tamlin:sliding-intro-screen:3.1.0'
     compile 'com.github.zzz40500:AndroidSweetSheet:1.1.0'
     testCompile 'junit:junit:4.12'
+    compile files('src/main/jniLibs/libDaumMapAndroid.jar')
 }
