--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     compile 'jp.wasabeef:picasso-transformations:2.1.0'
     compile 'com.matthew-tamlin:sliding-intro-screen:3.1.0'
     compile 'com.github.zzz40500:AndroidSweetSheet:1.1.0'
+    compile 'com.diogobernardino:williamchart:2.5.0'
     testCompile 'junit:junit:4.12'
     compile files('src/main/jniLibs/libDaumMapAndroid.jar')
 }
